--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="amber darken-4">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#home" class="brand-logo">Hexadecimal</a>
+          <a href="#home" class="brand-logo"> &copy;Hexadecimal</a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#about">About Us</a></li>
